--- a/src/main/resources/html/styles.css
+++ b/src/main/resources/html/styles.css
@@ -1,3 +1,5 @@
+/* -------------- Geral ----------------*/
+
 * {
     margin: 0;
     padding: 0;
@@ -6,16 +8,20 @@
 html, body {
     height: 100%;
     font-family: Cambria, Cochin, Georgia, Times, 'Times New Roman', serif;
+    max-height: 100%;
 }
 
 .container {
     display: flex;
     flex-direction: column;
-    height: 100%;
+    justify-content: space-between;
+    height: 100vh;
+    max-height: 100vh;
 }
 
 header {
     height: 15%;
+    min-height: 15%;
     display: flex;
     flex-direction: row;
     border-bottom: 5px solid rgb(188, 34, 35);
@@ -23,6 +29,8 @@ header {
 
 footer {
     height: 10%;
+    min-height: 10%;
+    max-height: 10%;
     display: flex;
     flex-direction: row;
     border-top: 5px solid rgb(188, 34, 35);
@@ -58,6 +66,7 @@ header div {
 main {
     flex: 1;
     display: flex;
+    overflow-y: auto;
     flex-direction: column;
     padding: 2%;
     gap: 2%;
@@ -69,6 +78,7 @@ main {
 #navBar {
     width: 100%;
     height: 7%;
+    min-height: 7%;
     display: flex;
     flex-direction: row;
     justify-content: space-around;
@@ -86,6 +96,7 @@ main {
 #testContent {
     background-color: lightgrey;
     height: 100%;
+    max-height: 100%;
     width: 100%;
     border-radius: 10px;
     display: flex;
@@ -103,14 +114,103 @@ main {
 }
 
 #TCMainContent {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
     background-color: #fff;
-    overflow-y: scroll;
-    overflow-x: hidden;
     height: 100%;
     width: 100%;
-
+    max-width: 100%;
 }
 
+button {
+    height: 40px;
+    width: 150px;
+    border-radius: 5px;
+    color: #fff;
+    background-color: rgb(188, 34, 35);
+}
+
+/* -------------- Pagina de Login ----------------*/
+#LoginContainer {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    height: 100%;
+}
+
+.form-container {
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    align-items: center;
+    max-width: 200px;
+    gap: 45px;
+}
+
+.form-container div {
+    display: flex;
+    flex-direction: column;
+    padding: 2%;
+    align-items: center;
+    max-width: 200px;
+    gap: 5px;
+}
+
+.form-container button {
+    height: 40px;
+    width: 150px;
+    border-radius: 5px;
+    color: #fff;
+    background-color: rgb(188, 34, 35);
+}
+
+.hidden {
+    display: none;
+}
+
+/* -------------- Usuarios ----------------*/
+
+/* -------------- Clientes ----------------*/
+
+/* -------------- Despesas ----------------*/
+#ExpenseContent {
+    width: 100%;
+    height: 100%;
+    display: flex;
+    flex-direction: row;
+    justify-content: center;
+    gap: 10px;
+}
+
+#ExpenseTable {
+    display: flex;
+    flex-direction: column;
+    max-width: 800px;
+    overflow-y: auto;
+}
+
+#TableContainer {
+    overflow-y: auto;
+    max-height: 400px;
+}
+
+.form-containerEx {
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    max-width: 400px;
+}
+
+.form-containerEx div {
+    display: flex;
+    flex-direction: column;
+    align-items: baseline;
+    max-width: 200px;
+}
+
+/* -------------- Responsividade ----------------*/
 @media (max-width: 800px) {
     #headerTitle {
         font-size: 2vw;
@@ -122,6 +222,10 @@ main {
 
     #TCTitle {
         font-size: 2vw;
+    }
+
+    #ExpenseContent {
+        flex-direction: column;
     }
 }
 
