--- a/src/main/resources/html/styles.css
+++ b/src/main/resources/html/styles.css
@@ -105,7 +105,7 @@ main {
 }
 
 #TCTitle {
-    height: 10%;
+    height: 50px;
     display: flex;
     align-items: center;
     justify-content: center;
@@ -131,7 +131,13 @@ button {
     background-color: rgb(188, 34, 35);
 }
 
-/* -------------- Pagina de Login ----------------*/
+tBody button {
+    height: 30px;
+    width: 70px;
+}
+
+/* -------------- Login ----------------*/
+
 #LoginContainer {
     display: flex;
     flex-direction: column;
@@ -166,49 +172,15 @@ button {
     background-color: rgb(188, 34, 35);
 }
 
-.hidden {
-    display: none;
-}
-
 /* -------------- Usuarios ----------------*/
 
-/* -------------- Clientes ----------------*/
+/* -------------- Credores ----------------*/
+
+/* -------------- Bases ----------------*/
 
 /* -------------- Despesas ----------------*/
-#ExpenseContent {
-    width: 100%;
-    height: 100%;
-    display: flex;
-    flex-direction: row;
-    justify-content: center;
-    gap: 10px;
-}
 
-#ExpenseTable {
-    display: flex;
-    flex-direction: column;
-    max-width: 800px;
-    overflow-y: auto;
-}
-
-#TableContainer {
-    overflow-y: auto;
-    max-height: 400px;
-}
-
-.form-containerEx {
-    display: flex;
-    flex-direction: column;
-    align-items: center;
-    max-width: 400px;
-}
-
-.form-containerEx div {
-    display: flex;
-    flex-direction: column;
-    align-items: baseline;
-    max-width: 200px;
-}
+/* -------------- Lançamentos ----------------*/
 
 /* -------------- Responsividade ----------------*/
 @media (max-width: 800px) {
